# tsp

./: README.md  pyproject.toml
notebooks/: baseline.ipynb
src/: __init__.py  inference.py  model.py
src/training/: training.py
